feat: メディアをゴミ箱に入れて戻せるようにする
